# Copyright 2025 Google LLC
#
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file or at
# https://developers.google.com/open-source/licenses/bsd

[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"

[project]
name = "vanir"
version = "1.0.2"
authors = [
    { name = "Hyunwook (Wooky) Baek", email = "baekhw@google.com" },
    { name = "Duy Truong", email = "duytruong@google.com" },
    { name = "Justin Dunlap", email = "justindunlap@google.com" },
]
maintainers = [
    { name = "Hyunwook (Wooky) Baek", email = "baekhw@google.com" },
    { name = "Duy Truong", email = "duytruong@google.com" },
    { name = "Justin Dunlap", email = "justindunlap@google.com" },
]
description = """\
Vanir is a source code-based static analysis tool that automatically \
identifies the list of missing security patches in the target system. \
"""
readme = "README.md"
# This license only applies to precompiled packages of Vanir that includes
# FuzzyC.
license = "GPL-3.0-only"
requires-python = "<3.14,>=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Topic :: Security",
]
keywords = [
  "static analysis",
  "source code analysis",
  "missing patch scanner",
]
dependencies = [
    # Keep only direct dependencies here, same as those mentioned in the
    # requirements.txt file. The dependencies here are kept at least on the same
    # version as present in the requirements_lock files and less than the next
    # major version to ensure compatibility.
    # Ref: https://packaging.python.org/en/latest/discussions/versioning/#semantic-versioning.
    "absl-py>=2.3.1,<3",
    "google-api-core[grpc]>=2.25.1,<3",
    "google-auth>=2.40.3,<3",
    "google-cloud-iam>=2.19.1,<3",

    # PiPs dependency resolution resolves to different major versions for
    # google-cloud-storage(v2.19.0 for Python 3.11, 3.12 and v3.4.0 for Python
    # 3.9, 3.10, 3.13) for different Python versions, hence keep the version
    # upper limit as 4 to keep the version range inclusive and simple.
    "google-cloud-storage>=2.19.0,<4",

    "jinja2>=3.1.6,<4",
    "jsonpath_ng>=1.7.0,<2",
    "mmh3>=5.2.0,<6",

    # For Python 3.9, use 'osv==0.0.18' to avoid 'unsupported operand type(s)'
    # error for '|' operator. For Python 3.10 and above, use the latest
    # supported OSV version as per the Python version.
    "osv==0.0.18; python_version<'3.10'",
    "osv>=0.0.21,<0.1.0; python_version>='3.10' and python_version<'3.13'",
    "osv>=0.1.2,<1; python_version>='3.13'",

    # For Python 3.9, use 'protobuf==3.20.3' as per the error message
    # seen while running Vanir PiP on Python 3.9 with latest protobuf version.
    # Reference: https://github.com/protocolbuffers/protobuf/issues/10051.
    "protobuf==3.20.3; python_version<'3.10'",
    "protobuf>=6.32.1,<7; python_version>='3.10'",

    "python-dateutil>=2.9.0.post0,<3",
    "requests>=2.32.5,<3",
    "tenacity>=9.1.2,<10",
    "typing-extensions>=4.15.0,<5",
    "unidiff>=0.7.5,<1",
]

[project.urls]
Homepage = "https://github.com/google/vanir"
Issues = "https://github.com/google/vanir/issues"
