# Copyright 2025 Google LLC
#
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file or at
# https://developers.google.com/open-source/licenses/bsd

# This BUILD file is required to expose the requirements_lock files to Bazel.
package(default_visibility = [
    "//visibility:public",
])
