# Copyright 2023 Google LLC
#
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file or at
# https://developers.google.com/open-source/licenses/bsd

# Bazel build rules for Vanir code extractors.
load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("@vanir_deps//:requirements.bzl", "requirement")

package(default_visibility = [
    "//visibility:public",
])

py_library(
    name = "code_extractor_base",
    srcs = ["code_extractor_base.py"],
    deps = [
        "//:vulnerability",
        requirement("requests"),
        requirement("unidiff"),
    ],
)

py_library(
    name = "code_extractor",
    srcs = ["code_extractor.py"],
    deps = [
        ":code_extractor_android",
        ":code_extractor_base",
        "//:vulnerability",
        requirement("requests"),
    ],
)

py_library(
    name = "code_extractor_android",
    srcs = ["code_extractor_android.py"],
    deps = [
        ":code_extractor_base",
        "//:vulnerability",
        requirement("requests"),
        requirement("unidiff"),
    ],
)

py_test(
    name = "code_extractor_test",
    srcs = ["code_extractor_test.py"],
    data = [
        "//vanir/testdata:test_patch_set",
    ],
    deps = [
        ":code_extractor",
        ":code_extractor_base",
        "//:vulnerability",
        requirement("absl-py"),
    ],
)

py_test(
    name = "code_extractor_android_test",
    srcs = ["code_extractor_android_test.py"],
    data = [
        "//vanir/testdata:test_patch_set",
    ],
    deps = [
        ":code_extractor_android",
        ":code_extractor_base",
        "//:vulnerability",
        requirement("absl-py"),
        requirement("requests"),
    ],
)
