# Copyright 2023 Google LLC
#
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file or at
# https://developers.google.com/open-source/licenses/bsd

# Integration tests for Vanir

load("@rules_python//python:defs.bzl", "py_test")
load("@vanir_deps//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:public"])

py_test(
    name = "missing_patch_detection_hermetic_test",
    srcs = ["missing_patch_detection_hermetic_test.py"],
    data = [
        "//vanir/testdata:test_gitiles_data",
        "//vanir/testdata:test_vulnerabilities",
        "//vanir/testdata:vanir_test_source_simplified",
    ],
    deps = [
        "//:file_path_utils",
        "//:osv_client",
        "//:reporter",
        "//:signature",
        "//:vanir_test_base",
        "//:vulnerability",
        "//:vulnerability_manager",
        "//vanir/scanners:scanner_base",
        "//vanir/scanners:target_selection_strategy",
        "//vanir/testdata:test_signatures",
        requirement("absl-py"),
        requirement("requests"),
    ],
)
