# Copyright 2023 Google LLC
#
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file or at
# https://developers.google.com/open-source/licenses/bsd

# Build rule for binding C++ parser core to python using Pybind.

load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")

package(default_visibility = [
    "//visibility:public",
])

pybind_extension(
    name = "parser_core",
    srcs = ["parser_core.cc"],
    deps = [
        "//vanir/language_parsers/cpp:parser_core",
        "@pybind11_abseil//pybind11_abseil:absl_casters",
        "@pybind11_abseil//pybind11_abseil:status_casters",
    ],
)
